added backgrounds based on current temp and zip code search

--- a/Zipline-03/css/style.css
+++ b/Zipline-03/css/style.css
@@ -1,9 +1,17 @@
 body {
 	background-color: #222;
 	color:#ddd;
+  text-shadow: 1px 1px #000;
 }
 .container {
   margin-top: 40px;
+  margin-bottom:40px;
+  background: #333 url('http://jinqiaojs.com/hd/snowy-mountain-hd-wallpaper-photo-5v9.jpg') no-repeat fixed center;
+  background-size: cover;
+  padding:40px;
+}
+.top-spacing {
+  margin-top:80px;
 }
 .form-group input {
   display: inline;
