--- a/Zipline-09/css/style.css
+++ b/Zipline-09/css/style.css
@@ -1,8 +1,24 @@
 * {
   box-sizing:border-box;
 }
-
 body {
   background-color: #222;
   color:#ddd;
+}
+#gameboard {
+  width:308px;
+  height:308px;
+  background-color: #444;
+  margin:20px auto;
+  padding:1px;
+}
+.tile {
+  font-size:40px;
+  height:100px;
+  width:100px;
+  background-color:#222;
+  margin:1px;
+  float:left;
+  padding:24px;
+  cursor:pointer;
 }
