Completed Simon Game with tempo increases, sounds, lights, and victory at turn 20

--- a/Zipline-10/css/style.css
+++ b/Zipline-10/css/style.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: #222;
   color:#ddd;
@@ -15,21 +14,34 @@ main {
   position: absolute;
   clip: rect(0px,195px,195px,0px);
   cursor:pointer;
+  transition:0.4s;
 }
 .ring-red {
-  background-image: radial-gradient(transparent 31%, #900 31%, #900 100%);
+  background:#600;
   transform:rotate(90deg);
 }
+.ring-red.active {
+  background:#f00;
+}
 .ring-green {
-  background-image: radial-gradient(transparent 31%, #090 31%, #090 100%);
+  background:#060;
+}
+.ring-green.active {
+  background:#0f0;
 }
 .ring-blue {
-  background-image: radial-gradient(transparent 31%, #009 31%, #009 100%);
+  background:#006;
   transform:rotate(180deg);
 }
+.ring-blue.active {
+  background:#00f;
+}
 .ring-yellow {
-  background-image: radial-gradient(transparent 31%, #990 31%, #990 100%);
+  background:#660;
   transform:rotate(270deg);
+}
+.ring-yellow.active {
+  background:#ff0;
 }
 #interface {
   position:absolute;
