--- a/Zipline-15/css/main.scss
+++ b/Zipline-15/css/main.scss
@@ -146,6 +146,7 @@ body {
     position: relative;
     text-shadow: 2px 2px 2px #000, -2px 2px 2px #000, 2px -2px 2px #000, -2px -2px 2px #000;
     margin: 0 -20px;
+    font-weight: bold;
     
     .hit {
       position: absolute;
@@ -219,21 +220,22 @@ body {
   border-radius: 3px 3px 0 0;
   text-align: center;
   padding: 10px;
-  .baddie-box, .weapon-box {
-    margin: 20px auto;
-  }
   h2 {
     margin: 10px auto;
     border-bottom: 1px solid #444;
   }
   h4 {
-    margin: 0;
     float: right;
     clear: both;
     margin: 7px;
   }
   .baddie, .boss, .gear {
     float: left;
+  }
+  .objective-box h4 {
+    margin: 7px auto;
+    float: none;
+    text-align: center;
   }
 
 }
