--- a/Zipline-20/stylesheets/main.scss
+++ b/Zipline-20/stylesheets/main.scss
@@ -7,16 +7,16 @@ h1 {
 }
 #chart {
   position: relative;
-  margin: 20px auto;
-  width: 960px;
+  margin: 0 auto;
+  width: 96%;
   svg {
     background-color: #222;
-    border-radius: 300px;
+    border-radius: 450px;
   }
 }
 #key {
   width: 1000px;
-  margin: 10px auto;
+  margin: 8px auto;
   overflow: auto;
   ul {
     overflow: auto;
@@ -41,6 +41,20 @@ h1 {
     height: 22px;
     padding: 2px;
     margin: 0;
+  }
+  @media screen and (max-width:1000px) {
+    width: 100%;
+    margin: 0;
+    text-align: center;
+    .color-box {
+      width: 80%;
+      margin: 0 9%;
+    }
+    ul {
+      padding: 0;}
+    .key-box {
+      width: 50%;
+    }
   }
 }
 .stroke {
