fixed broken image references and links

--- a/Zipline-01/css/style.css
+++ b/Zipline-01/css/style.css
@@ -1,3 +1,385 @@
+/************************************
+GENERAL
+*************************************/
+  html, body  {
+    background-color: #242424;
+    height:100%;
+  }
+  main {
+    background-color: #242424;
+    min-height: calc(100% - 289px);
+  }
+  h1, h2, h3, h4, h5, h6 {
+    color:#fff;
+  }
+  p, ul {
+    color:#fff;
+  }
+  #wrapper {
+    max-width:940px;
+    margin:0 auto;
+    padding:0 5%;
+  }
+  a {
+    text-decoration:none;
+    color:#593;
+  }
+  a:hover {
+    text-decoration: none;
+    color:#262;
+  }
+  ul {
+    list-style: none;
+  }
+
+
+/************************************
+NAVIGATION
+*************************************/
+
+
+  header, nav {
+    padding:0;
+    margin:0;
+  }
+  nav {
+    margin:0;
+    padding:0;
+    list-style: none;
+    background-color: #333;
+
+  }
+  nav a {
+    display:block;
+    height:100%;
+    width: 100%;
+    text-decoration: none;
+    color:#fff;
+    text-shadow: 0px 1px 0px rgba(255,255,255,.3), 0px -1px 0px rgba(0,0,0,.7);
+  }
+  nav ul {
+    display:flex;  
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    width:100%;
+    margin:0;
+    padding:0;
+  }
+  nav li {
+    display:block;
+    font-size: 20px;
+    padding:6px;
+    flex: 0 1 auto;
+    /*background: linear-gradient(transparent, #111);*/
+    border-left:1px solid #444;
+    border-right: 1px solid #111;
+    border-bottom:1px solid #000;
+    border-top:1px solid #555;
+  }
+  nav li:first-child {
+    border-left:0px;
+  }
+  li.spacer {
+    flex:1 10 auto;
+  }
+  li.right {
+    align-self: flex-end;
+  }
+
+
+/************************************
+JUMBOTRON
+*************************************/
+  .jtron {
+    padding-right: 0;
+    padding-left: 0;
+    background: linear-gradient(transparent, #1b5e20),
+                #222 url('http://lawlietblack.com/img/code.jpg') no-repeat fixed center;
+    background-size: cover;
+    margin:0 auto 0;
+    height: 140px;
+  }
+  .jtron h1 {
+    margin-top: 20px;
+    margin-bottom: 0;
+    -webkit-font-smoothing: antialiased;
+    text-shadow:  2px 8px 8px rgba(0, 0, 0, 0.6);
+    color: #ffffff;
+    font-size: 48px;  
+    font-weight: bold;
+  }
+  .jtron p {
+    margin-top: 0;
+    text-shadow:  1px 4px 4px rgba(0, 0, 0, 0.6);
+    font-size: 20px;
+    color: #ffffff;
+    margin-left: 10px;
+  }
+
+
+
+/************************************
+PAGE: PORTFOLIO
+*************************************/
+  .portfolio {
+    padding-top:20px;
+  }
+
+  paper-card {
+    background-color: #424b4b;
+    float:left;
+    margin:20px;
+    width:350px;
+  }
+  paper-card .card-content {
+    background-color: #424b4b;
+    width:350px !important;
+    width:200px;
+    padding:10px;
+    margin:0;
+  }
+  paper-card .card-bottom {
+    min-height: 160px;
+  }
+
+  paper-card img {
+    height:200px;
+    width:350px;
+    margin-bottom:-4px;
+  }
+  .avatar {
+    display: inline-block;
+    height: 64px;
+    width: 64px;
+    border-radius: 50%;
+    background: green;
+    color: white;
+    line-height: 64px;
+    font-size: 30px;
+    text-align: center;
+  }
+  .fullstack {
+    background: #c25975;
+
+  }
+
+  .fancy .title {
+    position: absolute;
+    top: 30px;
+    left: 100px;
+  }
+
+  .fancy img {
+    width: 100%;
+  }
+
+  .fancy .big {
+    font-size: 22px;
+    padding: 0;
+  }
+
+  .fancy .medium {
+    font-size: 16px;
+    padding-bottom: 8px;
+  }
+  .btn-github, .btn-website {
+    height:30px;
+    width:49.5%;
+    padding:0;
+    margin:0;
+  }
+  .btn-website {
+    background-color: #1E6711;
+    border-color: #1E6711;
+  }
+
+/************************************
+PAGE: APPS
+*************************************/
+  paper-button {
+    margin:4px 0px;
+  }
+  paper-button a {
+    display:block;
+    height:100%;
+    width:100%;
+  }
+  #projects {
+    padding:40px;
+  }
+  .project {
+    width:80%;
+    margin:auto;
+  }
+  .project .container {
+    max-width: 100%;
+  }
+  .project .thumbnail {
+    border:none;
+    background: none;
+    text-align: center;
+  }
+  .project form {
+    width:100%;
+    margin:40px 0;
+  }
+  select, .survey, #output {
+    width:100%;
+    height:40px;
+    background-color: #101010;
+    color:#fff;
+    border: 1px solid black;
+    font-size: 20px;
+    border-radius: 5px;
+    padding:4px 0 0 4px;
+  }
+  #project-output {
+    width:100%;
+    margin:40px 0;
+    min-height:200px;
+    border-radius: 5px;
+  }
+  .button {
+    margin:0 10px;
+    background-color: #222;
+    color:#fff;
+    border:1px solid black;
+    height:40px;
+    width:80px;
+    border-radius: 5px;
+    padding:0;
+    position:relative;
+    top: -2px;
+
+  }
+
+
+
+/************************************
+PAGE: UPDATES
+*************************************/
+
+  .updates {
+    width:90%;
+    margin:20px auto;
+  }
+  .updates a {
+    color: #2a2 !important;
+  }
+
+
+/************************************
+PAGE: ABOUT
+*************************************/
+  
+  .profile-photo {
+    display:block;
+    height:140px;
+    width:140px;
+    margin:0 auto 50px;
+    border-radius:100%;
+  }
+  .green {
+    background-color: #1b5e20;
+  }
+  #about {
+    margin:40px auto 0;
+    max-width:1200px;
+  }
+  #about p {
+    font-size: 1rem;
+    color: #fff;
+  }
+  #skills ul {
+    font-size:2rem;
+    color: #fff;
+    padding:10px;
+  } 
+
+  .progress {
+    width:calc(100% - 200px);
+    float:right;margin: 6px 0;
+    height:28px;
+  }
+  #education h1 {
+    font-size: 3rem;
+  }
+  #education ul {
+    color: #fff;
+    font-size: 1.4rem;
+  }
+  #enjoys li, #education li {
+    display:inline-block;
+    margin:20px 40px;
+    color: #fff;
+  }
+  #education li {
+    width:200px;
+  }
+  #education p {
+    color:#fff;
+    font-size:1rem;
+  }
+
+
+/************************************
+FOOTER
+*************************************/
+  footer {
+    background-color: #242424;
+    font-size:0.75em;
+    text-align:center;
+    clear:both;
+    padding-top:50px;
+  }
+  .social-icon {
+    height:30px;
+    width:30px;
+    margin:0 5px;
+    border-radius:100%;
+  }
+  footer p {
+    color: #888686;
+    padding-top: 6px;
+  }
+
+
+
+/************************************
+MEDIA QUERIES
+*************************************/
+  @media screen and (min-width:1200px) {
+    paper-card:nth-child(3n+1) {
+      margin-left:  calc((100% - 1130px)/2);
+    }
+  }
+  @media screen and (min-width: 801px) and (max-width: 1199px) {
+    paper-card:nth-child(2n+1) {
+      margin-left:  calc((100% - 740px)/2);
+    }
+  }
+  @media screen and (max-width:800px) {
+    paper-card {
+      margin-left:  calc((100% - 350px)/2);
+    }
+  }
+
+
+  @media screen and (min-width: 800px) {
+    /************************************
+    PAGE:ABOUT
+    *************************************/
+
+    .profile-photo {
+      float:left;
+      margin:0 5% 100px 0;
+    }
+  }
+
+
+
+
 /* GENERAL */
 body {
   background-color: #242424;
@@ -34,6 +416,9 @@ section {
 }
 #about, #skills {
   background-color: #1b5e20;
+  margin: 0;
+  width: 100%;
+  max-width: 2000px;
 }
 
 
@@ -66,10 +451,12 @@ paper-card .card-bottom {
 
 /* ABOUT */
 #about {
-  overflow-y:auto;
-  margin:auto;
   width: 100%;
-  max-width: 100%;
+  overflow-y:auto;
+}
+.about {
+  max-width:800px;
+  margin:auto;
 }
 .about p {
   font-size: 1.8rem;
@@ -95,10 +482,18 @@ paper-card .card-bottom {
   margin:20px 40px;
   color: #fff;
 }
+#education h1 i {
+  font-size: 50px;
+}
 #education li {
   width:200px;
 }
 #education p {
   color:#fff;
   font-size:1.2rem;
+}
+
+paper-tab a {
+  text-align: center;
+  padding: 10px;
 }
